# bfrt-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml
bfrt-client/: Cargo.toml
bfrt-client/examples/: print_pipeline.rs
bfrt-client/examples/simple_counter/: main.rs  run.py
bfrt-client/examples/simple_counter/p4src/: simple_counter.p4
bfrt-client/examples/tna_counter/: main.rs
bfrt-client/examples/tna_digest/: README.md  main.rs
bfrt-client/examples/tna_ports/: README.md  main.rs
bfrt-client/examples/tna_register/: README.md  main.rs
bfrt-client/src/: bfrt_info.rs  client.rs  lib.rs  table.rs
bfrt-client/src/bfrt_info/: learn.rs  table.rs
bfrt-client/src/utils/: de.rs
bfrt-client/src/utils/de/: data_field.rs  table_data.rs
src/: bfrt.rs  bfrt_info.rs  lib.rs  utils.rs
src/bfrt/: bf_runtime_client.rs  bf_runtime_server.rs  data_field.rs  entity.rs  forwarding_pipeline_config.rs  handle_id.rs  idle_table.rs  idle_timeout_notification.rs  key_field.rs  mode.rs  object_id.rs  set_forwarding_pipeline_config_request.rs  stream_message_request.rs  stream_message_response.rs  subscribe.rs  table_attribute.rs  table_entry.rs  table_mod_inc_flag.rs  update.rs  write_request.rs
src/bfrt/data_field/: container_array.rs
src/bfrt/object_id/: table_object.rs
src/google/: protobuf.rs  rpc.rs
src/utils/: data_field.rs  key_field.rs  table_entry.rs  table_flags.rs
tests/bfrt_info/: README.md  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
