[package]
name = "bfrt"
version = "0.1.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
edition = "2021"
description = "Intel Tofino BFRuntime gRPC specification for Rust"
categories = ["network-programming"]
keywords = ["grpc", "tofino", "bfruntime"]
license = "Apache-2.0"
repository = "https://github.com/duskmoon314/bfrt-rs"

[dependencies]
prost.workspace = true
serde = { version = "1.0.214", features = ["derive"] }
tonic.workspace = true

[dev-dependencies]
anyhow = "1.0.92"
serde_json = "1.0.132"

[workspace]
members = ["bfrt-client", "xtask"]

[workspace.dependencies]
prost = "0.13.3"
tonic = "0.12.3"
