[package]
name = "bfrt"
version = "0.1.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
edition = "2021"
description = "Intel Tofino BFRuntime gRPC specification for Rust"
categories = ["network-programming"]
keywords = ["grpc", "tofino", "bfruntime"]
license = "Apache-2.0"
repository = "https://github.com/duskmoon314/bfrt-rs"

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }

[workspace]
members = ["bfrt-client", "xtask"]

[workspace.dependencies]
anyhow = "1.0.98"

# GRPC
prost = "0.13.5"
prost-build = "0.13.5"
tonic = "0.13.1"
tonic-build = "0.13.1"

# Serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
