[package]
name = "bfrt-client"
version = "0.1.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
edition = "2021"
description = "A client wrapper for the Barefoot Tofino Runtime (BFRT) gRPC API."
categories = ["network-programming"]
keywords = ["grpc", "tofino", "bfruntime"]
license = "Apache-2.0"
repository = "https://github.com/duskmoon314/bfrt-rs"

[dependencies]
prost.workspace = true
tonic.workspace = true

tokio = "1.43.1"
tokio-stream = "0.1.16"

bfrt = { path = ".." }
anyhow = "1.0.91"
derive_builder = "0.20.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
error_set = "0.7.0"
log = "0.4.22"
tokio-util = "0.7.12"

[dev-dependencies]
env_logger = "0.11.5"
tokio = { version = "1.43.1", features = ["full"] }
