[package]
name = "bfrt-client"
version = "0.1.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
edition = "2021"
description = "A client wrapper for the Barefoot Tofino Runtime (BFRT) gRPC API."
categories = ["network-programming"]
keywords = ["grpc", "tofino", "bfruntime"]
license = "Apache-2.0"
repository = "https://github.com/duskmoon314/bfrt-rs"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }

tokio = "1.46.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

anyhow = { workspace = true }
bfrt = { path = ".." }
derive_builder = "0.20.2"
error_set = "0.8.5"
log = "0.4.27"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.5"
tokio = { version = "1.46.1", features = ["full"] }
